--- a/scss/object/project/_result-details.scss
+++ b/scss/object/project/_result-details.scss
@@ -16,7 +16,7 @@
 }
 
 .result-details__wrapper {
-    margin-bottom: 10rem;
+    margin-bottom: 9rem;
 
     @include sp {
         margin-bottom: 4rem;
